@@ -22,10 +22,12 @@ package de.ovgu.featureide.fm.ui.editors.featuremodel.actions;
 
 import static de.ovgu.featureide.fm.core.localization.StringTable.EXPORT_AS;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.eclipse.jface.action.Action;
 import org.eclipse.swt.widgets.Shell;
+import org.eclipse.ui.IWorkbench;
+import org.eclipse.ui.IWorkbenchWindow;
 import org.eclipse.ui.PlatformUI;
 
 import de.ovgu.featureide.fm.core.io.Problem;
@@ -57,7 +59,20 @@ public class ExportFeatureModelAction extends Action {
 
 	@Override
 	public void run() {
-		final Shell shell = PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell();
+		final Shell shell;
+		try {
+			final IWorkbench workbench = PlatformUI.getWorkbench();
+			if (workbench == null) {
+				return;
+			}
+			final IWorkbenchWindow activeWorkbenchWindow = workbench.getActiveWorkbenchWindow();
+			if (activeWorkbenchWindow == null) {
+				return;
+			}
+			shell = activeWorkbenchWindow.getShell();
+		} catch (final Exception e) {
+			return;
+		}
 
 		final String[] formats = GraphicsExporter.exporter.stream().map((exporter) -> exporter.getDescription() + "*." + //
 			exporter.getFileExtension()).toArray(String[]::new);
@@ -65,7 +80,7 @@ public class ExportFeatureModelAction extends Action {
 		final String defaultPath = featureModelEditor.getFeatureModel().getVarObject().getSourceFile().getParent().toString();
 		final ExportFeatureModelDialog dialog = new ExportFeatureModelDialog(shell, defaultPath, formats,
 				// format check callback
-				(formatIndex) -> new ProblemList(List.of(new Problem("This format may only be exported.", 0))),
+				(formatIndex) -> new ProblemList(Arrays.asList(new Problem("This format may only be exported.", 0))),
 				// export callback
 				(formatIndex, path, name) -> GraphicsExporter.exportAs(featureModelEditor.getViewer(),
 						path.resolve(name + "." + GraphicsExporter.exporter.get(formatIndex).getFileExtension()).toString(), formatIndex));
